--- a/src/main.scss
+++ b/src/main.scss
@@ -1,3 +1,29 @@
+@mixin onTablet {
+  @media (min-width: 744px) {
+    @content;
+  }
+}
+
+@mixin onDesctop {
+  @media (min-width: 1260px) {
+    @content;
+  }
+}
+
+[class*="__container"] {
+  max-width: 1020px;
+  margin: 0 auto;
+  padding: 0 20px;
+
+  @include onTablet {
+    padding: 0 72px;
+  }
+
+  @include onDesctop {
+    padding: 0 120px;
+  }
+}
+
 .page {
   font-family: "Poppins", sans-serif;
   font-style: normal;
