Created HEADER section

--- a/src/main.css
+++ b/src/main.css
@@ -27,4 +27,138 @@
   margin: 0;
 }
 
+.header {
+  background-image: url(../img/background/header-small.png);
+  background-size: cover;
+  background-position: right;
+  background-repeat: no-repeat;
+}
+@media (min-width: 744px) {
+  .header {
+    background-image: url(../img/background/header-large.png);
+    background-position: center;
+  }
+}
+.header__content {
+  height: 100vh;
+  box-sizing: border-box;
+  padding: 30px 0 88px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+@media (min-width: 744px) {
+  .header__content {
+    padding: 34px 0 130px;
+  }
+}
+@media (min-width: 1260px) {
+  .header__content {
+    padding: 36px 0 203px;
+  }
+}
+.header__nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.header__icons {
+  display: flex;
+  column-gap: 30px;
+}
+.header__icon {
+  width: 18px;
+  height: 18px;
+}
+@media (min-width: 744px) {
+  .header__icon {
+    width: 24px;
+    height: 24px;
+  }
+}
+.header__title {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 100%;
+  text-align: center;
+  letter-spacing: -1.5px;
+}
+@media (min-width: 744px) {
+  .header__title {
+    font-size: 64px;
+  }
+}
+@media (min-width: 1260px) {
+  .header__title {
+    font-size: 80px;
+  }
+}
+.header__icon-phone {
+  text-decoration: none;
+  position: relative;
+}
+.header__icon-link {
+  display: none;
+}
+@media (min-width: 1260px) {
+  .header__icon-link {
+    opacity: 0;
+    pointer-events: none;
+    transition: opacity 0.3s;
+    position: absolute;
+    right: 100%;
+    top: 50%;
+    transform: translateY(-50%);
+    display: block;
+    width: max-content;
+    padding-right: 12px;
+    font-weight: 700;
+    font-size: 12px;
+    line-height: 16px;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+    color: #fff;
+  }
+}
+.header__icon-phone:hover .header__icon-link {
+  opacity: 1;
+  pointer-events: all;
+}
+
+.logo__link {
+  display: block;
+  width: 130px;
+  height: 38px;
+}
+@media (min-width: 744px) {
+  .logo__link {
+    width: 187px;
+    height: 56px;
+  }
+}
+.logo__image {
+  width: 100%;
+  height: 100%;
+}
+
+.icon {
+  display: block;
+  position: relative;
+  width: 100%;
+  padding-bottom: 100%;
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+.icon--phone {
+  background-image: url(../img/icons/phone.svg);
+}
+.icon--menu {
+  background-image: url(../img/icons/menu.svg);
+  transition: background-image 0.3s;
+}
+.icon--menu:hover {
+  background-image: url(../img/icons/menu-hover.svg);
+}
+
 /*# sourceMappingURL=main.css.map */
