--- a/src/main.scss
+++ b/src/main.scss
@@ -1,3 +1,6 @@
+$colorMain: #fff;
+$colorAccent: #1d1d1d;
+
 @mixin onTablet {
   @media (min-width: 744px) {
     @content;
@@ -24,14 +27,45 @@
   }
 }
 
+%headerContent {
+  height: 100vh;
+  box-sizing: border-box;
+  padding: 30px 0 88px;
+
+  @include onTablet {
+    padding: 34px 0 130px;
+  }
+
+  @include onDesctop {
+    padding: 36px 0 203px;
+  }
+}
+
+%menuNavigation {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+%iconsSize {
+  width: 18px;
+  height: 18px;
+
+  @include onTablet {
+    width: 24px;
+    height: 24px;
+  }
+}
+
 .page {
+  position: relative;
   font-family: "Poppins", sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
   line-height: 140%;
-  background-color: #1d1d1d;
-  color: #fff;
+  background-color: $colorAccent;
+  color: $colorMain;
 
   &__body {
     margin: 0;
@@ -50,27 +84,15 @@
   }
 
   &__content {
-    height: 100vh;
-    box-sizing: border-box;
-    padding: 30px 0 88px;
+    @extend %headerContent;
 
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-
-    @include onTablet {
-      padding: 34px 0 130px;
-    }
-
-    @include onDesctop {
-      padding: 36px 0 203px;
-    }
   }
 
   &__nav {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+    @extend %menuNavigation;
   }
 
   &__icons {
@@ -79,13 +101,7 @@
   }
 
   &__icon {
-    width: 18px;
-    height: 18px;
-
-    @include onTablet {
-      width: 24px;
-      height: 24px;
-    }
+    @extend %iconsSize;
   }
 
   &__title {
@@ -132,7 +148,7 @@
       line-height: 16px;  
       letter-spacing: 2px;
       text-transform: uppercase;
-      color: #fff;
+      color: $colorMain;
     }
   }
 
@@ -143,23 +159,28 @@
 }
 
 .logo {
+  display: block;
+  width: 130px;
+  height: 38px;
+
+  @include onTablet {
+    width: 187px;
+    height: 56px;
+  }
 
   &__link {
     display: block;
-    width: 130px;
-    height: 38px;
-
-    @include onTablet {
-      width: 187px;
-      height: 56px;
-    }
-  }
-
-  &__image {
     width: 100%;
     height: 100%;
+    background-image: url(../img/icons/logo-white.svg);
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
+
+    &--black {
+      background-image: url(../img/icons/logo-black.svg);
+    }
   }
-  
 }
 
 .icon {
@@ -184,7 +205,101 @@
       background-image: url(../img/icons/menu-hover.svg);
     }
   }
+
+  &--menu-close {
+    background-image: url(../img/icons/menu-close.svg);
+  }
 }
 
+.menu {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  transform: translateX(-100%);
+  background-color: #c2c2c2;
+
+  &:target {
+    transform: translateX(0);
+  }
+
+  &__content {
+    @extend %headerContent;
+  }
+
+  &__nav {
+    @extend %menuNavigation;
+    margin-bottom: 44px;
+
+    @include onDesctop {
+      margin-bottom: 48px;
+    }
+  }
+
+  &__icon {
+    @extend %iconsSize;
+  }
+
+  &__list {
+    padding: 0;
+    margin: 0 0 40px;
+    list-style: none;
+  }
+
+  &__item {
+    margin-bottom: 32px;
+
+    &:last-child {
+      margin-bottom: 0;
+    }
+  }
+
+  &__link {
+    font-weight: 600;
+    font-size: 22px;
+    line-height: 22px;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+    text-decoration: none;
+    color: $colorAccent;
+    border-bottom: 1px solid transparent;
+    transition:  border-bottom 0.3s;
+
+    &:hover {
+      border-bottom: 1px solid $colorAccent;
+    }
+
+    @include onDesctop {
+      font-weight: 700;
+    }
+  }
+
+  &__info {
+    display: block;
+    width: max-content;
+    font-weight: 600;
+    text-transform: uppercase;
+    text-decoration: none;
+    color: $colorAccent;
+    transition: font-weight 0.3s;
+
+    &--call {
+      line-height: 27px;
+      margin-bottom: 16px;
+    }
+
+    &--book {
+      font-size: 12px;
+      line-height: 16px;
+      letter-spacing: 2px;
+      padding-bottom: 8px;
+      border-bottom: 1px solid $colorAccent;
+    }
+
+    &:hover {
+      font-weight: 700;
+    }
+  }
+}
 
 
