--- a/src/main.css
+++ b/src/main.css
@@ -83,6 +83,7 @@
   column-gap: 30px;
 }
 .header__title {
+  margin: 0;
   font-weight: 700;
   font-size: 36px;
   line-height: 100%;
@@ -249,6 +250,158 @@
 }
 .menu__info:hover {
   font-weight: 700;
+}
+
+.about {
+  margin-bottom: 92px;
+}
+@media (min-width: 744px) {
+  .about {
+    margin-bottom: 132px;
+  }
+}
+@media (min-width: 1260px) {
+  .about {
+    margin-bottom: 164px;
+  }
+}
+@media (min-width: 744px) {
+  .about__content {
+    display: flex;
+  }
+}
+.about__title {
+  margin: 0 0 32px;
+  font-weight: 500;
+  font-size: 32px;
+  line-height: 100%;
+  letter-spacing: -1.5px;
+}
+@media (min-width: 744px) {
+  .about__title {
+    flex: 1 1 50%;
+    margin: 0;
+    font-size: 48px;
+  }
+}
+@media (min-width: 1260px) {
+  .about__title {
+    font-size: 64px;
+    flex: 1 1 40%;
+  }
+}
+.about__text {
+  font-weight: 500;
+  font-size: 23px;
+  line-height: 140%;
+}
+@media (min-width: 744px) {
+  .about__text {
+    flex: 1 1 50%;
+  }
+}
+@media (min-width: 1260px) {
+  .about__text {
+    flex: 1 1 60%;
+  }
+}
+
+.compare {
+  margin-bottom: 92px;
+}
+@media (min-width: 744px) {
+  .compare {
+    margin-bottom: 120px;
+  }
+}
+@media (min-width: 1260px) {
+  .compare {
+    margin-bottom: 144px;
+  }
+}
+.compare__title {
+  margin: 0 0 48px;
+  font-weight: 500;
+  font-size: 32px;
+  line-height: 32px;
+  text-align: center;
+  letter-spacing: -1.5px;
+  text-transform: capitalize;
+}
+@media (min-width: 1260px) {
+  .compare__items {
+    display: flex;
+    flex-wrap: wrap;
+    column-gap: 24px;
+  }
+}
+.compare__item {
+  margin-bottom: 40px;
+}
+@media (min-width: 744px) {
+  .compare__item {
+    margin-bottom: 48px;
+    padding: 0 104px;
+  }
+}
+@media (min-width: 1260px) {
+  .compare__item {
+    margin-bottom: 0;
+    padding: 0;
+    flex: 1 1 31%;
+  }
+}
+.compare__item:last-child {
+  margin-bottom: 0;
+}
+.compare__photo {
+  margin-bottom: 32px;
+  overflow: hidden;
+  position: relative;
+  box-sizing: border-box;
+  width: 100%;
+  max-height: 316px;
+}
+@media (min-width: 744px) {
+  .compare__photo {
+    margin: 0 auto 32px;
+    width: 392px;
+  }
+}
+@media (min-width: 1260px) {
+  .compare__photo {
+    margin: 0;
+    width: 324px;
+    height: 264px;
+  }
+}
+.compare__photo::after {
+  content: "";
+  display: block;
+  padding-bottom: 100%;
+}
+.compare__img {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+  object-position: center;
+}
+.compare__name {
+  margin-bottom: 8px;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 140%;
+}
+.compare__description {
+  margin-bottom: 16px;
+  font-weight: 400;
+  line-height: 140%;
+}
+.compare__value {
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 140%;
 }
 
 /*# sourceMappingURL=main.css.map */
