--- a/src/main.scss
+++ b/src/main.scss
@@ -105,6 +105,7 @@ $colorAccent: #1d1d1d;
   }
 
   &__title {
+    margin: 0;
     font-weight: 700;
     font-size: 36px;
     line-height: 100%;
@@ -302,4 +303,160 @@ $colorAccent: #1d1d1d;
   }
 }
 
+.about {
+  margin-bottom: 92px;
+
+  @include onTablet {
+    margin-bottom: 132px;
+  }
+
+  @include onDesctop {
+    margin-bottom: 164px;
+  }
+
+  &__content {
+
+    @include onTablet {
+      display: flex;
+    }
+  }
+
+  &__title {
+    margin: 0 0 32px;
+    font-weight: 500;
+    font-size: 32px;
+    line-height: 100%;
+    letter-spacing: -1.5px;
+
+    @include onTablet {
+      flex: 1 1 50%;
+      margin: 0;
+      font-size: 48px;
+    }
+
+    @include onDesctop {
+      font-size: 64px;
+      flex: 1 1 40%;
+    }
+  }
+
+  &__text {
+    font-weight: 500;
+    font-size: 23px;
+    line-height: 140%;
+
+    @include onTablet {
+      flex: 1 1 50%;
+    }
+
+    @include onDesctop {
+      flex: 1 1 60%;
+    }
+  }
+}
+
+.compare {
+  margin-bottom: 92px;
+
+  @include onTablet {
+    margin-bottom: 120px;
+  }
+
+  @include onDesctop {
+    margin-bottom: 144px;
+  }
+
+  &__title {
+    margin: 0 0 48px;
+    font-weight: 500;
+    font-size: 32px;
+    line-height: 32px;
+    text-align: center;
+    letter-spacing: -1.5px;
+    text-transform: capitalize;
+  }
+
+  &__items {
+    @include onDesctop {
+      display: flex;
+      flex-wrap: wrap;
+      column-gap: 24px;
+    }
+
+  }
+
+  &__item {
+    margin-bottom: 40px;
+
+    @include onTablet {
+      margin-bottom: 48px;
+      padding: 0 104px;
+    }
+
+    @include onDesctop {
+      margin-bottom: 0;
+      padding: 0;
+      flex: 1 1 31%;
+    }
+
+    &:last-child {
+      margin-bottom: 0;
+    }
+  }
+
+  &__photo {
+    margin-bottom: 32px;
+    overflow: hidden;
+  
+    position: relative;
+    box-sizing: border-box;
+    width: 100%;
+    max-height: 316px;
+
+    @include onTablet {
+      margin: 0 auto 32px;
+      width: 392px;
+    }
+
+    @include onDesctop {
+      margin: 0;
+      width: 324px;
+      height: 264px;
+    }
+
+    &::after {
+      content: "";
+      display: block;
+      padding-bottom: 100%;
+    }
+  }
+
+  &__img {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+    object-position: center;
+  }
+
+  &__name {
+    margin-bottom: 8px;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 140%;
+  }
+
+  &__description {
+    margin-bottom: 16px;
+    font-weight: 400;
+    line-height: 140%;
+
+  }
+
+  &__value {
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 140%;
+  }
+}
 
