--- a/src/main.scss
+++ b/src/main.scss
@@ -374,6 +374,16 @@ $colorAccent: #1d1d1d;
     text-align: center;
     letter-spacing: -1.5px;
     text-transform: capitalize;
+
+    @include onTablet {
+      font-size: 48px;
+      line-height: 48px;
+    }
+
+    @include onDesctop {
+      font-size: 64px;
+      line-height: 64px;
+    }
   }
 
   &__items {
@@ -386,7 +396,12 @@ $colorAccent: #1d1d1d;
   }
 
   &__item {
-    margin-bottom: 40px;
+    max-width: 360px;
+    margin: 0 auto 40px;
+
+    &:last-child {
+      margin-bottom: 0;
+    }
 
     @include onTablet {
       margin-bottom: 48px;
@@ -394,13 +409,14 @@ $colorAccent: #1d1d1d;
     }
 
     @include onDesctop {
-      margin-bottom: 0;
+      margin: 0;
       padding: 0;
       flex: 1 1 31%;
-    }
 
-    &:last-child {
-      margin-bottom: 0;
+      display: flex;
+      flex-wrap: wrap;
+      flex-direction: column;
+      min-height: 100%;
     }
   }
 
@@ -419,7 +435,7 @@ $colorAccent: #1d1d1d;
     }
 
     @include onDesctop {
-      margin: 0;
+      margin: 0 0 32px;
       width: 324px;
       height: 264px;
     }
@@ -451,6 +467,7 @@ $colorAccent: #1d1d1d;
     font-weight: 400;
     line-height: 140%;
 
+    flex: 1 1 auto;
   }
 
   &__value {
