Added transition for open menu

--- a/src/main.scss
+++ b/src/main.scss
@@ -73,12 +73,14 @@ $colorAccent: #1d1d1d;
 }
 
 .header {
+  margin-bottom: 60px;
   background-image: url(../img/background/header-small.png);
   background-size: cover;
   background-position: right;
   background-repeat: no-repeat;
 
   @include onTablet {
+    margin-bottom: 120px;
     background-image: url(../img/background/header-large.png);
     background-position: center;
   }
@@ -217,6 +219,7 @@ $colorAccent: #1d1d1d;
   top: 0;
   left: 0;
   right: 0;
+  transition:  transform 0.3s;
   transform: translateX(-100%);
   background-color: #c2c2c2;
 
