--- a/src/main.css
+++ b/src/main.css
@@ -62,6 +62,7 @@
 }
 
 .header {
+  margin-bottom: 60px;
   background-image: url(../img/background/header-small.png);
   background-size: cover;
   background-position: right;
@@ -69,6 +70,7 @@
 }
 @media (min-width: 744px) {
   .header {
+    margin-bottom: 120px;
     background-image: url(../img/background/header-large.png);
     background-position: center;
   }
@@ -184,6 +186,7 @@
   top: 0;
   left: 0;
   right: 0;
+  transition: transform 0.3s;
   transform: translateX(-100%);
   background-color: #c2c2c2;
 }
