--- a/src/main.scss
+++ b/src/main.scss
@@ -480,3 +480,143 @@ $colorAccent: #1d1d1d;
   }
 }
 
+.details {
+  margin-bottom: 80px;
+
+  @include onTablet {
+    margin-bottom: 120px;
+  }
+
+  @include onDesctop {
+    margin-bottom: 180px;
+  }
+
+  &__title {
+    margin: 0 0 48px;
+    font-weight: 500;
+    font-size: 32px;
+    line-height: 32px;
+    text-align: center;
+    letter-spacing: -1.5px;
+    text-transform: capitalize;
+
+    @include onTablet {
+      font-size: 48px;
+      line-height: 100%;
+    }
+
+    @include onDesctop {
+      font-size: 64px;
+    }
+  }
+
+  &__item {
+    margin-bottom: 40px;
+
+    @include onTablet {
+      margin: 0 auto 48px;
+       width: 600px;
+    }
+
+    @include onDesctop {
+      width: 1020px;
+    }
+  }
+
+  &__photos {
+    margin-bottom: 16px;
+    display: flex;
+    column-gap: 20px;
+
+    @include onTablet {
+      column-gap: 24px;
+    }
+  }
+
+  &__photo {
+    position: relative;
+    box-sizing: border-box;
+    overflow: hidden;
+    flex: 1 1 50%;
+    min-width: 130px;
+    max-height: 200px;
+
+    transition: transform 0.3s;
+
+    &::after {
+      content: "";
+      display: block;
+      padding-bottom: 100%;
+    }
+
+    &:hover {
+      transform: scale(1.05);
+    }
+
+     @include onTablet {
+      max-height: 187px;
+
+      &--big {
+        flex: 1 1 70%;
+      }
+
+      &--small {
+        flex: 1 1 30%;
+      }
+    }
+
+    @include onDesctop {
+      max-height: 320px;
+    }
+    
+  }
+
+  &__img {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+  }
+
+  &__name {
+    margin: 0 0 8px;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 140%;
+  }
+
+  &__link {
+    display: block;
+    width: 100%;
+    padding: 14px 0;
+    text-align: center;
+    text-decoration: none;
+
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 27px;
+    background: $colorMain;
+    border-radius: 40px;
+    color: $colorAccent;
+    transition: box-shadow 0.3s;
+
+    &:hover {
+      box-shadow: 1px 4px 16px rgba(232, 232, 240, 0.4);
+    }
+
+    &:active {
+      box-shadow: 1px 4px 16px rgba(232, 232, 240, 0.64);
+    }
+
+    @include onTablet {
+      width: 392px;
+      margin: 0 auto;
+    }
+
+    @include onDesctop {
+      width: 324px;
+    }
+  }
+}
+
