Created CONTACTS section

--- a/src/main.scss
+++ b/src/main.scss
@@ -592,6 +592,7 @@ $colorAccent: #1d1d1d;
     padding: 14px 0;
     text-align: center;
     text-decoration: none;
+    border: 1px solid transparent;
 
     font-weight: 700;
     font-size: 16px;
@@ -616,6 +617,139 @@ $colorAccent: #1d1d1d;
 
     @include onDesctop {
       width: 324px;
+    }
+  }
+}
+
+.contacts {
+  margin-bottom: 120px;
+
+  @include onDesctop {
+    margin-bottom: 182px;
+  }
+
+  &__title {
+    margin: 0 0 48px;
+    font-weight: 500;
+    font-size: 32px;
+    line-height: 32px;
+    text-align: center;
+    letter-spacing: -1.5px;
+  }
+
+  &__information {
+    @include onTablet {
+      display: flex;
+      column-gap: 24px;
+    }
+
+    @include onDesctop {
+      column-gap: 198px;
+    }
+  }
+
+  &__form {
+    @include onTablet {
+      flex: 1 1 50%;
+    }
+  }
+
+  &__details {
+    @include onTablet {
+      flex: 1 1 50%;
+    }
+  }
+
+  &__description {
+    margin-bottom: 8px;
+    font-size: 14px;
+  }
+
+  &__info {
+    margin-bottom: 24px;
+    display: block;
+    width: max-content;
+    font-weight: 500;
+    text-decoration: none;
+    color: inherit;
+
+    &:last-child {
+      margin-bottom: 0;
+    }
+  }
+}
+
+.form {
+  margin-bottom: 48px;
+
+  @include onTablet {
+      margin-bottom: 0;;
+    }
+
+  &__field {
+    font-family: inherit;
+    margin-bottom: 16px;
+    display: block;
+    width: 100%;
+    box-sizing: border-box;
+    padding: 14px 16px;
+    cursor: pointer;
+    background-color: #f8f8fa;
+    color: $colorAccent;
+    border: 1px solid transparent;
+    transition: border 0.3s;
+    border-radius: 40px;
+    font-size: 14px;
+    line-height: 20px;
+    outline: none;
+
+    &:last-child {
+      margin-bottom: 32px;
+    }
+
+    &:hover {
+      border: 1px solid #D5D7DE;
+    }
+
+    &:active {
+      border: 1px solid #292929;
+    }
+
+    &::placeholder {
+      font-family: inherit;
+      font-size: 14px;
+      line-height: 20px;
+      color: #7e7e83;
+    }
+
+    &--textarea {
+      font-family: inherit;
+      border-radius: 16px;
+      height: 148px;
+      resize: none;
+    }
+  }
+
+  &__button {
+    width: 100%;
+    padding: 14px 0;
+    text-align: center;
+    border: 1px solid transparent;
+
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 27px;
+    background: $colorMain;
+    border-radius: 40px;
+    color: $colorAccent;
+    transition: box-shadow 0.3s;
+
+    &:hover {
+      box-shadow: 1px 4px 16px rgba(232, 232, 240, 0.4);
+    }
+
+    &:active {
+      box-shadow: 1px 4px 16px rgba(232, 232, 240, 0.64);
     }
   }
 }
