--- a/src/main.css
+++ b/src/main.css
@@ -534,6 +534,7 @@
   padding: 14px 0;
   text-align: center;
   text-decoration: none;
+  border: 1px solid transparent;
   font-weight: 700;
   font-size: 16px;
   line-height: 27px;
@@ -558,6 +559,125 @@
   .details__link {
     width: 324px;
   }
+}
+
+.contacts {
+  margin-bottom: 120px;
+}
+@media (min-width: 1260px) {
+  .contacts {
+    margin-bottom: 182px;
+  }
+}
+.contacts__title {
+  margin: 0 0 48px;
+  font-weight: 500;
+  font-size: 32px;
+  line-height: 32px;
+  text-align: center;
+  letter-spacing: -1.5px;
+}
+@media (min-width: 744px) {
+  .contacts__information {
+    display: flex;
+    column-gap: 24px;
+  }
+}
+@media (min-width: 1260px) {
+  .contacts__information {
+    column-gap: 198px;
+  }
+}
+@media (min-width: 744px) {
+  .contacts__form {
+    flex: 1 1 50%;
+  }
+}
+@media (min-width: 744px) {
+  .contacts__details {
+    flex: 1 1 50%;
+  }
+}
+.contacts__description {
+  margin-bottom: 8px;
+  font-size: 14px;
+}
+.contacts__info {
+  margin-bottom: 24px;
+  display: block;
+  width: max-content;
+  font-weight: 500;
+  text-decoration: none;
+  color: inherit;
+}
+.contacts__info:last-child {
+  margin-bottom: 0;
+}
+
+.form {
+  margin-bottom: 48px;
+}
+@media (min-width: 744px) {
+  .form {
+    margin-bottom: 0;
+  }
+}
+.form__field {
+  font-family: inherit;
+  margin-bottom: 16px;
+  display: block;
+  width: 100%;
+  box-sizing: border-box;
+  padding: 14px 16px;
+  cursor: pointer;
+  background-color: #f8f8fa;
+  color: #1d1d1d;
+  border: 1px solid transparent;
+  transition: border 0.3s;
+  border-radius: 40px;
+  font-size: 14px;
+  line-height: 20px;
+  outline: none;
+}
+.form__field:last-child {
+  margin-bottom: 32px;
+}
+.form__field:hover {
+  border: 1px solid #D5D7DE;
+}
+.form__field:active {
+  border: 1px solid #292929;
+}
+.form__field::placeholder {
+  font-family: inherit;
+  font-size: 14px;
+  line-height: 20px;
+  color: #7e7e83;
+}
+.form__field--textarea {
+  font-family: inherit;
+  border-radius: 16px;
+  height: 148px;
+  resize: none;
+}
+.form__button {
+  width: 100%;
+  padding: 14px 0;
+  text-align: center;
+  border: 1px solid transparent;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 27px;
+  background: #fff;
+  border-radius: 40px;
+  color: #1d1d1d;
+  transition: box-shadow 0.3s;
+}
+.form__button:hover {
+  box-shadow: 1px 4px 16px rgba(232, 232, 240, 0.4);
+}
+.form__button:active {
+  box-shadow: 1px 4px 16px rgba(232, 232, 240, 0.64);
 }
 
 /*# sourceMappingURL=main.css.map */
