--- a/src/main.css
+++ b/src/main.css
@@ -47,8 +47,29 @@
   }
 }
 
+.form__button, .details__link {
+  width: 100%;
+  padding: 14px 0;
+  text-align: center;
+  border: 1px solid transparent;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 27px;
+  background: #fff;
+  border-radius: 40px;
+  color: #1d1d1d;
+  transition: box-shadow 0.3s;
+}
+.form__button:hover, .details__link:hover {
+  box-shadow: 1px 4px 16px rgba(232, 232, 240, 0.4);
+}
+.form__button:active, .details__link:active {
+  box-shadow: 1px 4px 16px rgba(232, 232, 240, 0.64);
+}
+
 .page {
   position: relative;
+  scroll-behavior: smooth;
   font-family: "Poppins", sans-serif;
   font-style: normal;
   font-weight: 400;
@@ -530,24 +551,7 @@
 }
 .details__link {
   display: block;
-  width: 100%;
-  padding: 14px 0;
-  text-align: center;
   text-decoration: none;
-  border: 1px solid transparent;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 27px;
-  background: #fff;
-  border-radius: 40px;
-  color: #1d1d1d;
-  transition: box-shadow 0.3s;
-}
-.details__link:hover {
-  box-shadow: 1px 4px 16px rgba(232, 232, 240, 0.4);
-}
-.details__link:active {
-  box-shadow: 1px 4px 16px rgba(232, 232, 240, 0.64);
 }
 @media (min-width: 744px) {
   .details__link {
@@ -660,26 +664,6 @@
   height: 148px;
   resize: none;
 }
-.form__button {
-  width: 100%;
-  padding: 14px 0;
-  text-align: center;
-  border: 1px solid transparent;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 27px;
-  background: #fff;
-  border-radius: 40px;
-  color: #1d1d1d;
-  transition: box-shadow 0.3s;
-}
-.form__button:hover {
-  box-shadow: 1px 4px 16px rgba(232, 232, 240, 0.4);
-}
-.form__button:active {
-  box-shadow: 1px 4px 16px rgba(232, 232, 240, 0.64);
-}
-
 .footer {
   height: 200px;
   background-image: url(../img/background/footer-small.png);
