--- a/src/main.scss
+++ b/src/main.scss
@@ -57,8 +57,32 @@ $colorAccent: #1d1d1d;
   }
 }
 
+%button {
+  width: 100%;
+  padding: 14px 0;
+  text-align: center;
+  border: 1px solid transparent;
+
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 27px;
+  background: $colorMain;
+  border-radius: 40px;
+  color: $colorAccent;
+  transition: box-shadow 0.3s;
+
+  &:hover {
+    box-shadow: 1px 4px 16px rgba(232, 232, 240, 0.4);
+  }
+
+  &:active {
+    box-shadow: 1px 4px 16px rgba(232, 232, 240, 0.64);
+  }
+}
+
 .page {
   position: relative;
+  scroll-behavior: smooth;
   font-family: "Poppins", sans-serif;
   font-style: normal;
   font-weight: 400;
@@ -588,27 +612,8 @@ $colorAccent: #1d1d1d;
 
   &__link {
     display: block;
-    width: 100%;
-    padding: 14px 0;
-    text-align: center;
     text-decoration: none;
-    border: 1px solid transparent;
-
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 27px;
-    background: $colorMain;
-    border-radius: 40px;
-    color: $colorAccent;
-    transition: box-shadow 0.3s;
-
-    &:hover {
-      box-shadow: 1px 4px 16px rgba(232, 232, 240, 0.4);
-    }
-
-    &:active {
-      box-shadow: 1px 4px 16px rgba(232, 232, 240, 0.64);
-    }
+    @extend %button;
 
     @include onTablet {
       width: 392px;
@@ -729,28 +734,9 @@ $colorAccent: #1d1d1d;
       resize: none;
     }
   }
-
+  
   &__button {
-    width: 100%;
-    padding: 14px 0;
-    text-align: center;
-    border: 1px solid transparent;
-
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 27px;
-    background: $colorMain;
-    border-radius: 40px;
-    color: $colorAccent;
-    transition: box-shadow 0.3s;
-
-    &:hover {
-      box-shadow: 1px 4px 16px rgba(232, 232, 240, 0.4);
-    }
-
-    &:active {
-      box-shadow: 1px 4px 16px rgba(232, 232, 240, 0.64);
-    }
+    @extend %button;
   }
 }
 
