--- a/src/main.css
+++ b/src/main.css
@@ -616,9 +616,13 @@
   font-weight: 500;
   text-decoration: none;
   color: inherit;
+  transition: font-weight 0.3s;
 }
 .contacts__info:last-child {
   margin-bottom: 0;
+}
+.contacts__info:hover {
+  font-weight: 600;
 }
 
 .form {
